Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18051

Initialize the buffer for lvbo_update properly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      Since we may cancel locks in lvbo_update, so we need to prepare proper buffer in the mixing environment.

      Jul 15 11:34:07 oss00 kernel: LustreError: 13953:0:(lu_object.h:1324:lu_env_info()) ASSERTION( info ) failed:
      Jul 15 11:34:07 oss00 kernel: LustreError: 13953:0:(lu_object.h:1324:lu_env_info()) LBUG
      Jul 15 11:34:07 oss00 kernel: Pid: 13953, comm: mdt_rdpg04_001 4.18.0-477.27.1.el8_lustre.ddn17.x86_64 #1 SMP Wed Dec 20 09:59:57 UTC 2023
      Jul 15 11:34:07 oss00 kernel: Call Trace TBD:
      Jul 15 11:34:07 oss00 kernel: [<0>] libcfs_call_trace+0x6f/0xa0 [libcfs]
      Jul 15 11:34:07 oss00 kernel: [<0>] lbug_with_loc+0x3f/0x70 [libcfs]
      Jul 15 11:34:07 oss00 kernel: [<0>] ofd_lvbo_update+0x87e/0xda0 [ofd]
      Jul 15 11:34:07 oss00 kernel: [<0>] ldlm_handle_ast_error+0x494/0x7f0 [ptlrpc]
      Jul 15 11:34:07 oss00 kernel: [<0>] ldlm_cb_interpret+0x233/0x6c0 [ptlrpc]
      Jul 15 11:34:07 oss00 kernel: [<0>] ptlrpc_check_set+0x52e/0x20a0 [ptlrpc]
      Jul 15 11:34:07 oss00 kernel: [<0>] ptlrpc_set_wait+0x26f/0x6d0 [ptlrpc]
      Jul 15 11:34:07 oss00 kernel: [<0>] ldlm_run_ast_work+0xda/0x3d0 [ptlrpc]
      Jul 15 11:34:07 oss00 kernel: [<0>] ldlm_reclaim_full+0x539/0x7d0 [ptlrpc]
      Jul 15 11:34:07 oss00 kernel: [<0>] ldlm_handle_enqueue0+0x12d/0x16c0 [ptlrpc]
      Jul 15 11:34:07 oss00 kernel: [<0>] tgt_enqueue+0xa4/0x200 [ptlrpc]
      Jul 15 11:34:07 oss00 kernel: [<0>] tgt_request_handle+0xc9c/0x1950 [ptlrpc]
      Jul 15 11:34:07 oss00 kernel: [<0>] ptlrpc_server_handle_request+0x323/0xbd0 [ptlrpc]
      Jul 15 11:34:07 oss00 kernel: [<0>] ptlrpc_main+0xbf1/0x1510 [ptlrpc]
      Jul 15 11:34:07 oss00 kernel: [<0>] kthread+0x134/0x150
      

            ys Yang Sheng
            ys Yang Sheng
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: