LU-18051 ofd: Initialize the buffer for lvbo_update properly

The lu_env maybe used in different target than it initialized.
So we should refill it by tags to over come the issue while
MDT & OST work in same node.

Signed-off-by: Yang Sheng <ys@whamcloud.com>
Change-Id: Ie7706dc9df2dd6fdbbac801fb266a87d9ed22026
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/55808
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Mikhail Pershin <mpershin@whamcloud.com>
Reviewed-by: Alex Zhuravlev <bzzz@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>